[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-cost-estimator-cn"
version = "0.1.0"
description = "国内主流 LLM 模型 API 成本估算与对比工具"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Chance Dean", email = "novelnexusai@outlook.com"}
]
keywords = ["llm", "cost", "estimator", "china", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "rich>=13.7.0",
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
]

[project.scripts]
llm-cost-estimator-cn = "llm_cost_estimator_cn.cli:main"

[project.urls]
Homepage = "https://github.com/PerryLink/llm-cost-estimator-cn"
Repository = "https://github.com/PerryLink/llm-cost-estimator-cn"
